# substrate-node-template-contracts-pallet

./: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs  offchain_pallet.rs
src/: chain_spec.rs  service.rs
