[profile.release]
panic = 'unwind'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '2.0.0'

[build-dependencies]
vergen = '3.0.4'


[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'
jsonrpc-core = '14.0.5'
substrate-build-script-utils = "2.0.0-alpha.3"
sc-transaction-pool = "2.0.0-alpha.3"
sp-core = "2.0.0-alpha.3"
sp-inherents = "2.0.0-alpha.3"
sp-io = "2.0.0-alpha.3"
sp-runtime = "2.0.0-alpha.3"
sp-transaction-pool = "2.0.0-alpha.3"
sc-rpc = "2.0.0-alpha.3"
sc-executor = "0.8.0-alpha.3"
pallet-contracts-rpc = "0.8.0-alpha.3"
sc-finality-grandpa = "0.8.0-alpha.3"
sc-cli = "0.8.0-alpha.3"
sc-client = "0.8.0-alpha.3"
sc-service = "0.8.0-alpha.3"
sc-consensus-aura = "0.8.0-alpha.3"
sc-network = "0.8.0-alpha.3"
sp-consensus = "0.8.0-alpha.3"
sp-consensus-aura = "0.8.0-alpha.3"



[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'


[dependencies.node-template-runtime]
path = 'runtime'
version = '2.0.0'


[workspace]
members = ['runtime']

[[bin]]
name = 'node-template'
path = 'src/main.rs'
